trunk/Archive/c8fe22a5f8/output
main.cpp:11:11: error: 'member' is a protected member of 'Base'
        p.member = 42;
          ^
main.cpp:4:9: note: can only access this member on an object of type 'Derived'
    int member;
        ^
1 error generated.
